# amaranthine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md
benches/: perf.rs  profile_burst.rs
examples/: bench.rs  burst.rs
hooks/: amaranthine-context-file.sh  amaranthine-context-prompt.sh  amaranthine-context-read.sh  amaranthine-post-build.sh  amaranthine-post-edit.sh  amaranthine-precompact.sh  amaranthine-session-start.sh  amaranthine-stop.sh  amaranthine-subagent-start.sh  amaranthine-subagent-stop.sh
include/: amaranthine.h
prompts/: deep-refactor.md
relay/: amr-hook  amr-hook.c
src/: binquery.rs  briefing.rs  cache.rs  callgraph.rs  cffi.rs  codepath.rs  compact.rs  compress.rs  config.rs  context.rs  crash.rs  datalog.rs  delete.rs  depgraph.rs  digest.rs  edit.rs  export.rs  format.rs  fxhash.rs  hook.rs  index.rs  install.rs  intern.rs  inverted.rs  json.rs  lib.rs  lock.rs  main.rs  mcp.rs  migrate.rs  perf.rs  prune.rs  reconstruct.rs  reverse.rs  score.rs  search.rs  session.rs  sock.rs  stats.rs  store.rs  (+4 more)
src/mcp/: dispatch.rs  tools.rs
tests/: bench  bench.c
tools/: amrq  amrq.c
