[package]
name = "amaranthine"
version = "10.0.0"
edition = "2021"
description = "Fast local knowledge base for AI-assisted development"

# Zero dependencies. Everything hand-rolled.

[lib]
name = "amaranthine"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "amaranthine"
path = "src/main.rs"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"
